styles/Tutorial.module.css
/*
So I would redesign this page in a way that the would make the uX way better on mobile-> starting from scratch

I would use display flex, justify cintent space between and flex direction column (vertical). 
Doing this and setting the min-height of the parent section (that has the alphabet, the flag, meaning and All other letters for easy scrolling)
to about 100vh. About because browsers have their own navigation ontop which may make 100vh lower (not fully coincide with the full screen)
anythin else will be at the bottom. I should still retain the design of individula elementrs tho
*/

.mainview{
	margin: 0;
	min-height: 100vh;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
}

.slider{
  width: 100%; /*entire parent vw*/
  height: auto;
  display: flex;
  overflow-x: auto;
  /*webkit to make it swipe smoothly on mobile based browsers*/
  -webkit-overflow-scrolling: touch;
  scroll-behavior: smooth;
  /*now to make it snap on scroll*/
  scroll-snap-type: x mandatory;
}

.slider > div{
  scroll-snap-align: start;
}

.slider .slide{
  width: 100%;
  flex-shrink: 0;
}

.nav-group{
  display: flex;
  width: 100%;
  justify-content: space-around;
  margin: 15vh 0 20px;
}

.nav-group a{
  background-color: var(--plain);
  font-size: 1rem;
  padding: 3px 10px;
  border-radius: 50%;
  box-shadow: .2px .2px 1px 1px rgba(0, 0, 0, .1);
  font-weight: 600;
  /*will need to add some margins later*/
}

.nav-group a:hover,.nav-group a:focus{ /*maybe the focus is not needed because when u click a letter and you scroll away from it, the clicked alphabet still retains the focus but it is not what is been viewed*/
  background-color: var(--button);
}

